CBC blocks complete + lines

--- a/CBC.html
+++ b/CBC.html
@@ -19,11 +19,11 @@
             <input type="text" id="CBCInput" maxlength="10" placeholder="Enter binary values">
             <p></p>
             <label for="IVInput"  class="blacktext">IV Value:</label>
-            <input type="text" id="xorInput" maxlength="5" placeholder="Enter binary values">
+            <input type="text" id="IV" maxlength="5" placeholder="Enter binary values">
             <button id="RandomIV">Random</button>
             <button id="updateButton">Update</button>
         </div>
     </div>
-    <canvas styles=""></canvas>
+    <canvas></canvas>
 </body>
 </html>
