--- a/CBC.html
+++ b/CBC.html
@@ -23,6 +23,7 @@
             <button id="RandomIV">Random</button>
             <button id="updateButton">Update</button>
         </div>
+        <button id="animateButton">Animate</button>
     </div>
     <canvas></canvas>
 </body>
