--- a/CBC.html
+++ b/CBC.html
@@ -24,6 +24,11 @@
             <button id="updateButton">Update</button>
         </div>
         <button id="animateButton">Animate</button>
+        <img src="image_1.png" t="image_1" width="150" height="150" style="position: absolute; transform: translate(675px, 430px);">
+        <button id="hint" class="Hint"></button>
+    </div>
+    <div class="hintcontainer">
+        <p class="blacktext text"></p>
     </div>
     <canvas></canvas>
 </body>
