--- a/LFSR.html
+++ b/LFSR.html
@@ -22,6 +22,8 @@
             <input type="text" id="xorInput" placeholder="Enter positions (e.g. 2,4)">
             <button id="updateButton">Update</button>
         </div>
+        <img src="image_1.png" t="image_1" width="150" height="150" style="position: absolute; transform: translate(675px, 430px);">
+        <button id="hint" class="Hint"></button>
         <div>
             <button id="animateButton">Animate</button>
         </div>
@@ -30,6 +32,9 @@
     <div class='results blacktext'>Results
         <p>&nbsp;</p>
         <div id = 'results'></div>
+    </div>
+    <div class="hintcontainer">
+        <p class="blacktext text"></p>
     </div>
 </body>
 </html>
