--- a/homepage.html
+++ b/homepage.html
@@ -15,12 +15,11 @@
 <body>
     <div class="background">
         <div class="intro-container">
-            <h2 class="blacktext">Welcome to the Cybersecurity Sandbox!</h2>
-            <p class="blacktext">Step into a safe, interactive world where you can explore, learn, and experiment with real cyber security concepts without the real-world risks. This animated sandbox is your playground for cybersecurity mastery!</p>
+            <h2 class="blacktext text"></h2>
         </div>
-        <img src="image_1.png" alt="image_1" width="125" height="125" style="transform: translate(60px, 75px);">
+        <img src="image_1.png" alt="image_1" width="150" height="150" style="transform: translate(60px, 75px);">
         <div>
-            <button onclick="openLFSRPopUp()" class="LFSRButton blacktext">LFSR Stream Cipher</button>
+            <button onclick="openLFSRPopUp()" id="LFSR" class="LFSRButton blacktext">LFSR Stream Cipher</button>
             <div class="LFSRPopUp" id="LFSRPopUp">
                 <button class="close-btn" onclick="closePopUp('LFSR')">X</button>
                 <h2 class="blacktext">LFSR Description</h2>
@@ -33,10 +32,11 @@
                 <p class="blacktext">5. Repeat the process for each new bit.</p> 
                 <button id="GoToLFSR">Proceed</button>
             </div>
-            <p class="blacktext" stlye="top: 400px">Difficulty</p>
+            <p class="blacktext LFSRDifficulty">Difficulty⭐⭐</p>
+            <p class="blacktext CBCDifficulty">Difficulty⭐⭐⭐</p>
         </div>
         <div>            
-            <button onclick="openCBCPopUp()" class="CBCButton blacktext">CBC Block Cipher</button>
+            <button onclick="openCBCPopUp()" id="CBC" class="CBCButton blacktext">CBC Block Cipher</button>
             <div class="CBCPopUp" id="CBCPopUp">
                 <button class="close-btn" onclick="closePopUp('CBC')">X</button>
                 <h2 class="blacktext">CBC Description</h2>
@@ -50,7 +50,7 @@
             </div>
         </div>
         <div>            
-            <button onclick="openQuizPopUp()" class="QuizButton blacktext">Quiz</button>
+            <button onclick="openQuizPopUp()" id="Quiz" class="QuizButton blacktext">Quiz</button>
             <div class="QuizPopUp" id="QuizPopUp">
                 <button class="close-btn" onclick="closePopUp('Quiz')">X</button>
                 <h2 class="blacktext">Quiz Description</h2>
