Quiz hint complete
quiz hint complete, back button magic fix

--- a/homepage.html
+++ b/homepage.html
@@ -56,7 +56,7 @@
                 <h2 class="blacktext">Quiz Description</h2>
                 <b class="blacktext">It's time for a mini quiz!</b>
                 <p class="blacktext">Let's put what you have learned to the test!</p>
-                <p class="blacktext">There are 5 multiple choice questions on LFSR and CBC</p>
+                <h1 style = "font-size:30px ;"class="blacktext">There are 5 multiple choice questions on LFSR and CBC</h1>
                 <p class="blacktext">Try your best to answer all the questions using the knowledge you have gained from the animations</p>
                 <p class="blacktext">Good Luck!</p>
                 <button id="GoToQuiz">Proceed</button>
