--- a/quiz.html
+++ b/quiz.html
@@ -19,10 +19,20 @@
             <b id="question" class="question, blacktext" style ="font-size: 25px;"></b>
             <div id="options" class="options"></div>
             <button id="nextBtn" style="display:none;">Next</button>
-            <div id="result" style="margin-top: 20px;"></div>
+            <div id="result" style="margin-top: 20px;" class="blacktext"></div>
+            <div class="leaderboard"><h2 class="blacktext "id="leaderboard" style="display: none; text-align: center; align-items: center;"></h2>
+                <p id="first" class="blacktext"></p>
+                <p id="second" class="blacktext"></p>
+                <p id="third" class="blacktext"></p>
+            </div>
             <button id="homeBtn" style="display:none;">Home</button>
             </div>
         </div>
+        <img src="image_1.png" t="image_1" width="150" height="150" style="position: absolute; transform: translate(675px, 430px);">
+        <button id="hint" class="Hint"></button>
+    </div>
+    <div class="hintcontainer">
+        <p class="blacktext text"></p>
     </div>
 </body>
 </html>
